--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 :root {
-    --md-primary-fg-color: #6a9ab0;
+    --md-primary-fg-color: #6EACDA;
     --md-primary-fg-color--light: #ead8b1;
     --md-primary-fg-color--dark: #ead8b1;
 }
